--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,12 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script>
-            const api_host = 'http://test-436866578.us-east-1.elb.amazonaws.com'
-
+        <script>         
             const produce = () => {
                 console.log('produce');
 
                 axios
-                    .post(`${api_host}/api/produce`)
+                    .post('/api/producer')
                     .then(getStock)
                     .then(setStockValue)
                     .catch(console.log);
@@ -19,7 +17,7 @@
                 console.log('consume');
 
                 axios
-                    .post(`${api_host}/api/consume`)
+                    .post('/api/consumer')
                     .then(getStock)
                     .then(setStockValue)
                     .catch(console.log);
@@ -28,7 +26,7 @@
             const getStock = () => {
                 console.log('getStock');
 
-                return axios.get(`${api_host}/api/stock`);
+                return axios.get('/api/stock');
             };
 
             const setStockValue = (response) => {
