Added dynamoDB and local db for stock.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,6 +33,8 @@
                 console.log(response.data.stock);
                 document.getElementById('stock').value = response.data.stock;
             }
+
+            getStock().then(setStockValue);
         </script>
     </head>
     <body>
